--- a/newBuild/src/css/message.css
+++ b/newBuild/src/css/message.css
@@ -17,3 +17,8 @@
     background-color: #F5F5F5;
     box-shadow: none;
 }
+.fontcolor span{
+    height: 0.6rem;
+    line-height: 0.6rem;
+    color: red!important;
+}
