--- a/newBuild/src/css/addinquiry.css
+++ b/newBuild/src/css/addinquiry.css
@@ -22,3 +22,52 @@
     margin-bottom: 0!important;
     border-bottom: 0.01rem solid #ccc;
 }
+.qy{
+    width:100%;
+    height:65%;
+    background: #fff;
+    border-radius: 0.1rem 0.1rem 0 0;
+    position:fixed;
+    bottom:0;
+    display: flex;
+    flex-direction: column;
+}
+.checkqy1{
+    width: 100%;
+    text-align: center;
+    display: flex;
+    line-height: 0.8rem;
+    font-size: 0.3rem;
+    border-bottom: 0.01rem solid #E1E1E1;
+}
+.checkqy span:nth-last-child(1){
+    line-height: 0.8rem;
+    float:right;
+    margin-right: 0.2rem;
+    font-size: 18px;
+}
+.qytitle{
+    padding-left: 0.4rem;
+}
+.sfp{
+    width:100%;
+    height:10%;
+    background:#FAFAFA;
+    line-height:0.8rem
+}
+.lilist{
+    padding:0.2rem 0.2rem 0.2rem 0;
+    padding-left: 0.4rem;
+}
+.sfdiv{
+    display: block;
+    position:relative;
+    min-height:100%;
+    width:100%;
+}
+.sfdivnone{
+    display: none;
+    position:relative;
+    min-height:100%;
+    width:100%;
+}
